# cheque

./: README.md  cheque.py  setup.cfg
cheque/: cli.py  constants.py  main.py  model.py
tests/: test_model.py
