[metadata]
name = cheque
version = 0.1
description = Convert cheque amounts to words
url = https://github.com/Badboy-16/cheque
author = Yang Yunyi
author_email = yunyiyang@ln.hk
license = GPLv3
license_file = LICENSE

[options]
packages = cheque

[options.entry_points]
console_scripts =
    cheque = cheque.main:main
